# jarvis-os

./: Cargo.toml  x86_64-jarvis.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  memory_scrapped.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/common/: int_like.rs
src/context/: memory.rs  mod.rs  process.rs  switch.rs
src/cpu/: logical.rs  mod.rs
src/memory/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
