[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.28", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.5"
volatile = "0.4.4"
spin = "0.9.8"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
